--- a/client/assets/stylesheets/entries/app.scss
+++ b/client/assets/stylesheets/entries/app.scss
@@ -9,15 +9,20 @@ body {
     font-family: "Roboto", sans-serif
 }
 
+a{
+    display:block;
+}
+
+
 /* Header Styling */
 
 .header {
     height:75px;
+    width:100%;
+    justify-content: flex-end;
 }
 
-.header a{
-    margin:auto;
-}
+
 .header, .header a{
     display:flex;
     flex-direction: row;
@@ -26,7 +31,9 @@ body {
 
 
 .header a{
-    width:40%
+    width:40%;
+    height:100%;
+    justify-content: center;
 }
 
 .header img{
@@ -41,18 +48,76 @@ body {
 
 }
 
+.greeting{
+    margin:0 10%;
+}
+
 /* Feature Items Styling */
+.features,.feature_item, .h_feature_item{
+    display:flex;
+}
 
-.h_features {
-    display: flex;
+.features {
     flex-direction: column;
-    padding:10%;
+    margin:5%;
+    justify-content: center;
 }
 
-.h_feature_item *{
-    float:left;
+.feature_item, .h_feature_item {
+    flex-direction: row;
+    margin: 2.5%;
+    padding: 2.5%;
+}
+.feature_item{
+    border: 1px solid black;
+    border-radius: 10px;
+    height: 175px;
+    justify-content: space-between;
+}
+.h_feature_item{
+    height:100px;
+    justify-content: space-between;
+}
+#odd{
+    flex-direction: row-reverse;
+}
+.feature_item *{
 }
 
-.h_feature_item img {
+.feature_img {
     width:40%;
+    height:auto;
+}
+
+.arrow{
+    position:relative;
+    height: 20%;
+    width:15%;
+    margin-right:5%;
+    align-self:flex-end;
+
+}
+
+.feature_header{
+    font-size: 1.5em;
+    margin: .5em;
+    padding: .5em;
+}
+.feature_text, .h_feature_header{
+    margin: .5em 0 .5em 0;
+}
+
+.feature_text{
+    font-size: .75em;
+}
+.button_wrapper{
+    text-align: center;
+}
+
+
+.footer{
+    display: flex;
+    justify-content: center;
+    width:100%;
+    margin: 25px 0 25px 0;
 }
