--- a/client/assets/stylesheets/entries/app.scss
+++ b/client/assets/stylesheets/entries/app.scss
@@ -73,13 +73,13 @@ a {
 .h_feature_item {
     flex-direction: row;
     margin: 2.5%;
-    padding: 2.5%;
 }
 .feature_item {
     border: 1px solid black;
     border-radius: 10px;
     height: 150px;
     justify-content: space-between;
+    position:relative;
 }
 .h_feature_item {
     height: 100px;
@@ -116,9 +116,10 @@ a {
 }
 
 .feature_header {
-    font-size: 1.5em;
+    font-size: 3em;
     margin: 0.5em;
     padding: 0.5em;
+    font-weight:500;
 }
 .feature_text,
 .h_feature_header {
@@ -179,4 +180,11 @@ a {
     color: red;
     font-size: 0.75em;
     padding: 10px;
+}
+
+.bg_item{
+    width:100%;
+    height:100%;
+    position:absolute;
+    opacity:.7;
 }
